<resources>
    <string name="app_name">MyCalculator</string>
    <string name="_1" translatable="false">1</string>
    <string name="_2" translatable="false">2</string>
    <string name="_3" translatable="false">3</string>
    <string name="_4" translatable="false">4</string>
    <string name="_5" translatable="false">5</string>
    <string name="_6" translatable="false">6</string>
    <string name="_7" translatable="false">7</string>
    <string name="_8" translatable="false">8</string>
    <string name="_9" translatable="false">9</string>
    <string name="_0" translatable="false">0</string>
    <string name="_point" translatable="false">.</string>
    <string name="_minus" translatable="false">-</string>
    <string name="_plus" translatable="false">+</string>
    <string name="_div" translatable="false">/</string>
    <string name="_sub" translatable="false">*</string>
    <string name="_res" translatable="false">=</string>
    <string name="theme_name_light">Light style</string>
    <string name="theme_name_dark">Purple style</string>
    <string name="bt_settings_txt">Settings</string>
    <string name="bt_exit">Close</string>
</resources>